--- a/less/home-page.less
+++ b/less/home-page.less
@@ -60,6 +60,7 @@
       .feature-item {
         display       : flex;
         flex-direction: column;
+        justify-content: space-between;
 
         @media @tablet {
           margin-bottom: 20px;
@@ -71,7 +72,6 @@
 
         div {
           margin-top: 32px;
-          padding   : 0px 32px;
         }
 
         img {
@@ -125,7 +125,9 @@
           }
 
           .buttons {
+            display: flex;
             justify-content: flex-start;
+            align-items: flex-end;
 
             @media @phone {
               justify-content: center;
